2005-09-16  Joerg Wunsch <j@uriah.heep.sax.de>

	* usb_libusb.c (usbdev_drain): actually implement draining to aid
	synchronizing against a JTAG ICE in weird state.

2005-09-16  Joerg Wunsch <j@uriah.heep.sax.de>

	* butterfly.c: improve the butterfly initialization so it is more likely
	to synchonize; [bug #9787: avrdude 4.4.0 correct butterfly interface]

2005-09-14  Joerg Wunsch <j@uriah.heep.sax.de>

	* jtagmkII.c (jtagmkII_paged_load): return the number of bytes read.
	This makes EEPROM block reads work again.

2005-09-14  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: add a jtag2slow programmer alias, and make
	"jtag2" default to 115200 Bd.
	* doc/avrdude.texi: document the above changes.

2005-08-30  Joerg Wunsch <j@uriah.heep.sax.de>

	* usb_libusb.c: Consistently use unsigned char for buffers.

2005-08-29  Brian S. Dean  <bsd@bsdhome.com>

	* avr910.c: Eliminate compiler warnings.  GCC 4.x elicits many
	signedness warnings when passing unsigned char * when char * is in
	the prototype and vice versa.  Clean these up along with a few
	others.
	* butterfly.c: (Ditto.)
	* jtagmkII.c: (Ditto.)
	* safemode.c: (Ditto.)
	* safemode.h: (Ditto.)
	* ser_posix.c: (Ditto.)
	* serial.h: (Ditto.)
	* stk500.c: (Ditto.)
	* stk500v2.c: (Ditto.)

2005-08-28  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add support for the ATtiny25/45/85.  Note that
	only the ATtiny45 appears to have a complete XML description right
	now.
	* avrdude.1: Mention all the recently added device support: AT90PWM2/3,
	ATmega164/324/644, ATmega329x/649x, ATtiny25/45/85.
	* doc/avrdude.texi: (Ditto.)

2005-08-17  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: fix the EEPROM size for ATmega329x/649x.

2005-08-16  Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add support for the AT90PWM2/3.

2005-07-27  Joerg Wunsch <j@uriah.heep.sax.de>

	(This work has been done as part of a contract with Atmel, Dresden.)